deploy/miporfolio/templates/deploy-miportfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miportfolio
  namespace: miportfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miportfolio
  template:
    metadata:
      labels:
        app: miportfolio
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: miportfolio
          image: franparradaw/ptaller-webserver:1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
