deploy/miporfolio/templates/service-miportfolio.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-miportfolio
  namespace: miportfolio
spec:
  type: NodePort
  selector:
    app: miportfolio
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30089
