deploy/miporfolio/templates/ingress-miportfolio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miportfolio-ingress
  namespace: miportfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: webtaller.franparra.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-miportfolio
                port:
                  number: 80
